--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "process": "^0.11.10",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "typescript": "^5.2.2",
     "util": "^0.12.5",
